--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@
     --dark-grey: #283444;
     --grey: #D2D3D5;
     --white: #FFF;
+    --font1: 'Roboto Condensed', sans-serif;
+    --font2: 'Bebas Neue', cursive;
 }
+
 
 /*
 Fonts
@@ -17,13 +20,20 @@ Fonts
 
 body {
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: var(--font1)
 }
 
-.section {
-    height: 100vh;
-    width: 100vw;
+.wrapper {
+    max-width: 1920px;
+    min-width: 320px;
 }
+
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
+
 
 .tops {
     background-color: var(--dark-blue);
