--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -1,7 +1,10 @@
 .Home__main {
-  /* position: relative; */
+  color: var(--white);
+  background-color: var(--dark-blue);
 }
 
+
+/* CTA - HOME */
 .Home__CTA {
   display: grid;
   place-content: center;
@@ -12,10 +15,8 @@
 }
 
 .Home__copy {
-  max-width: 800px;
-  margin-bottom: 1em;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   color: var(--white);
 }
 
@@ -25,6 +26,7 @@
 }
 
 .Home__sub-copy {
+  max-width: 800px;
   font-size: 1rem;
   margin-bottom: 1.25em;
 }
@@ -51,7 +53,7 @@
   position: absolute;
   inset: 0;
   object-fit: cover;
-  z-index: -1;
+  z-index: 1;
 }
 
 .overlay {
@@ -59,11 +61,56 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 2;
   background: linear-gradient(45deg, rgba(33, 43, 56, 0.6) 0%, rgba(30, 52, 93, 0.6) 25%, rgba(52, 56, 127, 0.6) 50%, rgba(98, 49, 152, 0.6) 75%, rgba(154, 0, 162, 0.6) 100%);
 }
 
 
+/* TOPS - HOME */
+.Home__tops {
+  background-color: var(--dark-blue);
+}
+
+.Home__title-section {
+  font-size: 2rem;
+  font-weight: normal;
+  letter-spacing: 0.1rem;
+  font-family: var(--font-title);
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 0 4px 3px var(--pink);
+}
+
+/* SONGS - HOME  */
+.Home__songs {
+  background-image: linear-gradient(to right top, #9a00a2, #633198, #353880, #1d355f, #212c3a);
+}
+
+
+/* ARTISTS - HOME */
+.Home__artists {
+  background-color: var(--pink);
+}
+
+.Home__artists .Home__title-section {
+  text-shadow: 0 4px 3px var(--purple-blue);
+}
+
+/* Genres - HOME */
+.Home__genres {
+  background-image: linear-gradient(to left bottom, #9a00a2, #633198, #353880, #1d355f, #212c3a);
+}
+
+.Home__tops,
+.Home__songs,
+.Home__artists,
+.Home__genres
+{
+  padding: 1.75em 0;
+}
+
+
+/* Media Queries */
 @media screen and (min-width: 948px) {
   .Home__CTA {
     justify-content: start;
