--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@ body {
     width: 90%;
     margin: 0 auto;
 }
+
+@media screen and (min-width: 948px) {
+    .container {
+        width: 80%;
+    }
+}
