--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -8,6 +8,7 @@
 .Home__CTA {
   display: grid;
   place-content: center;
+  position: relative;
 }
 
 .section {
@@ -26,7 +27,6 @@
 }
 
 .Home__sub-copy {
-  max-width: 800px;
   font-size: 1rem;
   margin-bottom: 1.25em;
 }
@@ -72,6 +72,7 @@
 }
 
 .Home__title-section {
+  margin-bottom: 1.25em;
   font-size: 2rem;
   font-weight: normal;
   letter-spacing: 0.1rem;
