--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,14 +1,10 @@
 .navbar{
     display: flex;
-    justify-content: center;
     align-items: center;
-    align-content: center;
-    margin: auto;
-    width: 40%;
+    margin: 20px;
 }
 
 .user__icon{
-    width: 55px;
     border: none;
     background-color: transparent;
 }
