--- a/src/styles/components/topsongs.css
+++ b/src/styles/components/topsongs.css
@@ -6,6 +6,7 @@
 }
 
 .Top__songs-list {
+  margin: 0;
   padding: 2em 2.5em;
   list-style-type: decimal-leading-zero;
   background-color: var(--dark-blue);
