--- a/src/styles/pages/notfound.css
+++ b/src/styles/pages/notfound.css
@@ -3,6 +3,7 @@ a:visited {
     text-decoration: none;
     color: white;
     cursor: pointer;
+    font-weight: 700;
 }
 
 .NotFound {
@@ -13,14 +14,17 @@ a:visited {
     padding: 0 15rem;
     color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .NotFound__img {
-    height: 30rem;
+    max-width: 20rem;
 }
 
-.NotFound__return {
-    font-weight: 700;
+.NotFound__text {
+    margin: 2rem 0;
+    color:white;
+    font-size: 1.5rem;
 }
