--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Permanent+Marker&display=swap');
 
 :root {
     --pink: #9A00A2;
@@ -9,6 +10,7 @@
     --white: #FFF;
     --font-text: 'Roboto Condensed', sans-serif;
     --font-title: 'Bebas Neue', cursive;
+    --font-formTitle:'Comfortaa',sans-serif;
 }
 
 
