--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     --dark-grey: #283444;
     --grey: #D2D3D5;
     --white: #FFF;
+    --black:#000;
     --font-text: 'Roboto Condensed', sans-serif;
     --font-title: 'Bebas Neue', cursive;
     --font-formTitle:'Comfortaa';
