--- a/src/styles/components/form.css
+++ b/src/styles/components/form.css
@@ -1,10 +1,10 @@
 .Form {
-background-color: var(--white);
-max-width: 286px;
-padding: 5%;
-text-align: center;
-height: 350px;
-box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: var(--white);
+    max-width: 286px;
+    padding: 5%;
+    text-align: center;
+    height: 350px;
+    box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .Title {
@@ -16,6 +16,7 @@ box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.25);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
 .Subtitle {
     font-family: var(--font-text);
     font-size: 1.5rem;
@@ -23,14 +24,15 @@ box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.25);
     margin-top: -3%;
 }
 
-a#inicio{
-    color:black;
+#inicio {
+    color: var(--black);
 }
+
 .Last__line {
     font-family: var(--font-text);
     font-size: 1rem;
     margin-top: .5rem;
-    
+
 }
 
 /* Media Queries */
@@ -48,8 +50,8 @@ a#inicio{
         font-size: 2rem;
     }
 
-     .Last__line {
+    .Last__line {
         font-size: 1.2rem;
-        
+
     }
 }
