Fix NotFound Page styles bug

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,12 @@ h5 {
     margin: 0 auto;
 }
 
+a:link,
+a:visited {
+    text-decoration: none;
+    cursor: pointer;
+} 
+
 @media screen and (min-width: 948px) {
     .container {
         width: 80%;
