--- a/src/styles/pages/notfound.css
+++ b/src/styles/pages/notfound.css
@@ -1,9 +1,3 @@
-a:link,
-a:visited {
-    text-decoration: none;
-    cursor: pointer;
-} 
-
 .NotFound {
     width: 100vw;
     min-height: 100vh;
@@ -26,3 +20,14 @@ a:visited {
     color:white;
     font-size: 1.5rem;
 }
+
+.NotFound__link {
+    color: white;
+    font-weight: 700;
+}
+
+.NotFound__link:hover {
+    color: white;
+    text-decoration: underline;
+}
+
