--- a/src/styles/components/topsongs.css
+++ b/src/styles/components/topsongs.css
@@ -1,20 +1,26 @@
-
-
-.Top__songs-wrapper{
+.Top__songs-wrapper {
   padding: 0.25em;
-  margin: 1em;
+  margin: 1em auto;
+  width: 100%;
   background-image: linear-gradient(180deg, var(--pink) 0%, var(--purple-blue) 100%);
 }
 
 .Top__songs-list {
   margin: 0;
   padding: 2em 2.5em;
+  text-align: center;
   list-style-type: decimal-leading-zero;
+  list-style-position: inside;
   background-color: var(--dark-blue);
 }
 
 .Tops__songs-title {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  text-align: center;
+  text-shadow: 4px 4px 5px var(--purple-blue);
+}
+
+.Tops__songs-description {
   text-align: center;
 }
 
@@ -22,7 +28,8 @@
   margin: 0;
 }
 
-
 @media screen and (min-width: 948px) {
-
+  .Top__songs-wrapper {
+    width: 60%;
+  }
 }
