--- a/src/styles/components/searchbar.css
+++ b/src/styles/components/searchbar.css
@@ -8,17 +8,17 @@
 .search__input{
     width: 30%;
     padding: 0.25em .75em;
+    color: var(--white);
     border: none;
     border-bottom: 3px solid;
+    letter-spacing: .05em;
     border-image: linear-gradient(to left, var(--pink), var(--purple-blue)) 1;
-    
     background-color: transparent;
 }
 
 .search__input::placeholder{
     color: var(--white);
-    font-size: 1.1em;
-    letter-spacing: .05em;
+    font-size: 1.1em;    
 }
 .search__button{
     color: var(--white);
