--- a/src/styles/pages/dashboard.css
+++ b/src/styles/pages/dashboard.css
@@ -3,6 +3,33 @@
     background-color: var(--dark-blue);
 }
 
+.Dashboard__header {
+    padding: 2rem;
+    min-height: 15rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-image: linear-gradient(to right top,
+            rgba(154, 0, 162, 0.6),
+            rgba(98, 49, 152, 0.6),
+            rgba(52, 56, 127, 0.6),
+            rgba(30, 52, 93, 0.6),
+            rgba(33, 43, 56, 0.6)), url(https://images.pexels.com/photos/1762578/pexels-photo-1762578.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+    background-position: center;
+    background-size: cover;
+}
+
+.Dashboard__title {
+    padding: 0;
+    font-size: 2.5rem;
+    font-family: var(--font-logo);
+    font-weight: 700;
+    background: -webkit-linear-gradient(#FFF, #929CB0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
 .Dashboard__section {
     min-height: 200px;
 }
@@ -20,7 +47,7 @@
     border: 1px solid #fff;
 }
 
-.item__info > p  {
+.item__info>p {
     margin: 0;
 }
 
