--- a/src/styles/pages/dashboard.css
+++ b/src/styles/pages/dashboard.css
@@ -29,6 +29,11 @@
     -webkit-text-fill-color: transparent;
 }
 
+.Dashboard__profile {
+    margin: 2rem;
+    display: flex;
+    justify-content: flex-end;
+}
 
 .Dashboard__section {
     min-height: 200px;
@@ -40,22 +45,24 @@
 }
 
 .item__icon {
+    padding: 0.7em;
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 50px;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
 }
 
 .item__info>p {
     margin: 0;
+    font-size: 1.2rem;
 }
 
 .Dashboard__list {
     display: grid;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1.75em;
+    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+    gap: 2em;
 }
 
 
@@ -77,15 +84,14 @@
 
 /* Artists */
 .ArtistUser {
-    min-width: 120px;
-    padding: 0.25em;
+    min-width: 10em;
+    padding: 0.2em;
     background-image: linear-gradient(180deg, var(--pink) 0%, var(--purple-blue) 100%);
 }
 
 .ArtistUser .item__info {
-    padding: 0.25em;
-    width: 100%;
-    display: auto;
+    padding: 0.5em;
+    min-width: 100%;
     background-color: var(--dark-blue);
 }
 
@@ -101,4 +107,6 @@
 /* Genres */
 .GenreUser {
     min-width: 120px;
+    display: flex;
+    align-items: center;
 }
