--- a/src/styles/components/menuPremium.css
+++ b/src/styles/components/menuPremium.css
@@ -6,14 +6,15 @@
 }
 
 .logo__menu{
-    font-family: var(--font-formTitle);
-    font-size: 2rem;
-    letter-spacing: 0.1rem;
-    background-clip: text;
-    background: linear-gradient(to right, #465263, #9D9D9D);
-    -webkit-text-fill-color: transparent;
+    padding: 0;
+    font-size: 2.5rem;
+    font-family: var(--font-logo);
+    font-weight: 700;
+    background: -webkit-linear-gradient(#FFF, #929CB0);
     -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
+
 .side__container{
     display: flex;
     align-items: center;
@@ -32,7 +33,10 @@
 .list__menu li{
     margin-top: 15px;
     margin-left: 20px;
+}
 
+.menu__container a{
+    color: white;
 }
 
 .list__menu li:hover{
