--- a/src/styles/components/artist.css
+++ b/src/styles/components/artist.css
@@ -1,4 +1,4 @@
-.artist {
+.Artist {
     min-height: 60vh;
     display: flex;
     flex-direction: column;
@@ -9,18 +9,18 @@
     background-position: center;
 }
 
-.artist h1 {
+.Artist h1 {
     padding: 1rem;
     font-size: 3rem;
     text-align: center;
 }
 
-.artist-btn {
+.Artist__btn {
     color: white;
     border: 2px solid white;
     border-radius: 0;
 }
 
-.artist-btn:hover {
+.Artist__btn:hover {
     color: white;
 }
