--- a/src/styles/pages/login-sign.css
+++ b/src/styles/pages/login-sign.css
@@ -14,7 +14,7 @@
             rgba(98, 49, 152, 0.6),
             rgba(52, 56, 127, 0.6),
             rgba(30, 52, 93, 0.6),
-            rgba(33, 43, 56, 0.6)), url(../../assets/images/bckImage.png);
+            rgba(33, 43, 56, 0.6)), url(https://images.pexels.com/photos/2078076/pexels-photo-2078076.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-size: cover;
     position: absolute;
     z-index: -1;
