--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -8,15 +8,16 @@
   scroll-snap-type: y mandatory;
 
 }
+
 .section {
   width: 100%;
   min-height: 100vh;
-  background-size:  cover;
+  background-size: cover;
   scroll-snap-align: start;
 }
 
 .Home__container {
-  position:relative;
+  position: relative;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -95,7 +96,8 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  background: linear-gradient(45deg, rgba(33, 43, 56, 0.6) 0%, rgba(30, 52, 93, 0.6) 25%, rgba(52, 56, 127, 0.6) 50%, rgba(98, 49, 152, 0.6) 75%, rgba(154, 0, 162, 0.6) 100%);
+  background: linear-gradient(to right top, rgba(55, 70, 91, 0.7), rgba(55, 70, 91, 0.7));
+  /* background: linear-gradient(45deg, rgba(33, 43, 56, 0.6) 0%, rgba(30, 52, 93, 0.6) 25%, rgba(52, 56, 127, 0.6) 50%, rgba(98, 49, 152, 0.6) 75%, rgba(154, 0, 162, 0.6) 100%); */
 }
 
 
