--- a/src/styles/components/menuPremium.css
+++ b/src/styles/components/menuPremium.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 2rem;
 }
 
 .logo__menu {
