--- a/src/styles/components/song.css
+++ b/src/styles/components/song.css
@@ -1,20 +1,22 @@
 .Song__container {
   min-width: 180px;
+  width: 100%;
   display: flex;
   gap: 0.5em;
   margin: 0.8rem;
 }
 
 .Song__info {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.Song__year {
-  margin: 0;
-}
-
 .Song__name {
   margin: 0;
+  /* padding-right: 2rem; */
+  display: flex;
+  justify-content: left; 
+  gap: 1rem;
 }
